tests/vertical-slice/accept/match_bool_true_false_exhaustive.hew
// Accept: bool has its own finite exhaustiveness path; true/false is complete
// without a catch-all arm.
fn main() -> i64 {
    let x = true;
    match x {
        true => 0,
        false => 1,
    }
}
